<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">iRemote</string>
    <string name="pictureb_name">Photo Browser</string>
    <string name="videob_name">Video Browser</string>
    <string name="soft_update_title">Software Upgrade</string>
    <string name="soft_update_updatebtn">Upgrade</string>
    <string name="soft_update_later">Upgrade later</string>
    <string name="soft_updating">Upgrading---</string>
    <string name="soft_update_cancel">Cancel</string>
    <string name="picture">Picture</string>
    <string name="select_intro">Long-press a thumb nail to add an image</string>
    <string name="show_intro">Press a thumb nail to display at larger size</string>
    <string name="finished">OK</string>
    <string name="getting_location">Getting location---</string>
    <string name="cannot_get_location">Cannot get location</string>
    <string name="cannot_get_sensor">Cannot get sensor</string>
    <string name="location_north">%s N</string>
    <string name="location_south">%s S</string>
    <string name="location_east">%s E</string>
    <string name="location_west">%s W</string>
    <string name="exit_toast">Click again exit application</string>
    <string name="postive">-</string>
    <string name="negative">+</string>
    <string name="mode_y100">MODEL: QR Y100</string>
    <string name="mode">MODE</string>
    <string name="model">MODEL</string>
    <string name="reset">RESET</string>
    <string name="reverse">REVERSE</string>
    <string name="trim">TRIM</string>
    <string name="mode1">Mode1</string>
    <string name="mode2">Mode2</string>
    <string name="mode3">Mode3</string>
    <string name="mode4">Mode4</string>
    <string name="thro">THRO</string>
    <string name="rudd">RUDD</string>
    <string name="elev">ELEV</string>
    <string name="aile">AILE</string>
    <string name="thro0">THRO: 0</string>
    <string name="rudd0">RUDD: 0</string>
    <string name="elev0">ELEV: 0</string>
    <string name="aile0">AILE: 0</string>
</resources>
