<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="45.0dip">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold" android:layout_gravity="center_vertical" android:id="@id/models" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mode_y100" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="5.0dip">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:layout_gravity="center_vertical" android:id="@id/label0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reverse" />
        <CheckBox android:id="@id/aa" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/elev" />
        <CheckBox android:id="@id/bb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aile" />
        <CheckBox android:id="@id/cc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/thro" />
        <CheckBox android:id="@id/dd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rudd" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/trim" />
        <TableLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:stretchColumns="4">
            <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
                <Button android:textColor="#ff00ff00" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/elevd" android:background="@layout/shape" android:layout_width="25.0dip" android:layout_height="wrap_content" android:text="@string/postive" />
                <Button android:textColor="#ffff8c00" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/elevdi" android:background="@layout/shape" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:text="@string/elev0" />
                <Button android:textColor="#ff00ff00" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/elevi" android:background="@layout/shape" android:layout_width="25.0dip" android:layout_height="wrap_content" android:text="@string/negative" />
            </TableRow>
            <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="11.0dip">
                <Button android:textColor="#ff00ff00" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/ailed" android:background="@layout/shape" android:layout_width="25.0dip" android:layout_height="wrap_content" android:text="@string/postive" />
                <Button android:textColor="#ffff8c00" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/ailedi" android:background="@layout/shape" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:text="@string/aile0" />
                <Button android:textColor="#ff00ff00" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/ailei" android:background="@layout/shape" android:layout_width="25.0dip" android:layout_height="wrap_content" android:text="@string/negative" />
            </TableRow>
            <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="11.0dip">
                <Button android:textColor="#ff00ff00" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/throd" android:background="@layout/shape" android:layout_width="25.0dip" android:layout_height="wrap_content" android:text="@string/postive" />
                <Button android:textColor="#ffff8c00" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/throdi" android:background="@layout/shape" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:text="@string/thro0" />
                <Button android:textColor="#ff00ff00" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/throi" android:background="@layout/shape" android:layout_width="25.0dip" android:layout_height="wrap_content" android:text="@string/negative" />
            </TableRow>
            <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="11.0dip">
                <Button android:textColor="#ff00ff00" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/ruddd" android:background="@layout/shape" android:layout_width="25.0dip" android:layout_height="wrap_content" android:text="@string/postive" />
                <Button android:textColor="#ffff8c00" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/rudddi" android:background="@layout/shape" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:text="@string/rudd0" />
                <Button android:textColor="#ff00ff00" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/ruddi" android:background="@layout/shape" android:layout_width="25.0dip" android:layout_height="wrap_content" android:text="@string/negative" />
            </TableRow>
        </TableLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip">
            <TextView android:textAppearance="?android:textAppearanceLarge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mode" />
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip">
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
                    <Button android:textColor="#ffff8c00" android:gravity="center" android:id="@id/mode1" android:background="@layout/shape" android:padding="8.0dip" android:layout_width="60.0dip" android:layout_height="wrap_content" android:text="@string/mode1" />
                    <Button android:textColor="#ffff8c00" android:gravity="center" android:id="@id/mode4" android:background="@layout/shape" android:padding="8.0dip" android:layout_width="60.0dip" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:text="@string/mode2" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
                    <Button android:textColor="#ffff8c00" android:gravity="center" android:id="@id/mode2" android:background="@layout/shape" android:padding="8.0dip" android:layout_width="60.0dip" android:layout_height="wrap_content" android:text="@string/mode3" />
                    <Button android:textColor="#ffff8c00" android:gravity="center" android:id="@id/mode3" android:background="@layout/shape" android:padding="8.0dip" android:layout_width="60.0dip" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:text="@string/mode4" />
                </LinearLayout>
                <Button android:textColor="#ffff8c00" android:gravity="center" android:id="@id/recover" android:background="@layout/shape" android:padding="8.0dip" android:layout_width="60.0dip" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/reset" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>